tests/ui/type-qpath-eof5.stderr
error: no rules expected the token `>`
 --> $DIR/type-qpath-eof5.rs:6:23
  |
6 |     input = [{ <T as F> }]
  |                       ^

error: aborting due to previous error

